--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=Parv Krishnan Portfolio>
+    <meta name="description" content=Jey Jeyapalan Portfolio>
     <meta name="keywords" content="creativepersonal, resume, cv, portfolio, personal, developer, designer,personal resume, onepage, clean, modern">
-    <meta name="author" content=Parv Krishnan>
+    <meta name="author" content=Jey Jeyapalan>
     <!-- PAGE TITLE -->
     <title>Jey Jeyapalan</title>
     <!-- BOOTSTRAP CSS -->
@@ -56,7 +56,7 @@
                     <div class="col-md-3 col-sm-2">
                         <!-- START LOGO DESIGN AREA -->
                         <div class="logo">
-                            <a href="index.html">It's Me!</a>
+                            <a href="index.html">Jey^2.</a>
                         </div>
                         <!-- END LOGO DESIGN AREA -->
                     </div>
@@ -105,8 +105,8 @@
                         <div class="row header-part">
                             <div class="col-md-6">
                                 <div class="header-text">
-                                    <h2>Parvathi Krishnan <br> <span>Software Engineering </span></h2>
-                                    <p>A data-driven software engineering with experience developing B2B and B2C products.<a href="JeyJ-Resume.Pdf">View Resume</a></p>
+                                    <h2>Jey Jeyapalan <br> <span>Product Manager </span></h2>
+                                    <p>A data-driven product manager with experience in B2B and B2C products.<a href="JeyJ-Resume.Pdf">View Resume</a></p>
                                     <div class="header-social-links">
                                         <ul>
                                             <li><a href=""><i class="fa fa-facebook facebook"></i></a>
@@ -224,9 +224,9 @@
                 <div class="col-sm-12">
                     <div class="section-title">
                         <h2>Hi there!Nice to e-meet you.</h2>
-		My name is Parvathi. I'm a Software Engineering student at the University of Waterloo and an aspiring artist. <br>	          
+		My name is Jey. I'm a Management Engineering student at the University of Waterloo and an aspiring Product Manager. <br>	          
                
-		    If you can't find me on campus, I'm probably weightlifting, coding, or writing dramatic plays!. 
+		    If you can't find me on campus, I'm probably weightlifting, coding, or scrumming up a new smoothie recipe. 
               .</p>
                 </div>
             </div>
@@ -234,7 +234,7 @@
                 <div class="col-md-6 col-sm-12">
                     <!-- START ABOUT TEXT AREA -->
                     <div class="about-text">
-                        <h2 class="wow fadeInDown" data-wow-delay="0.4s">I love building tech products with high- performance teams!</h2>
+                        <h2 class="wow fadeInDown" data-wow-delay="0.4s">I love tech products and leading teams.</h2>
                         <p class="wow fadeInDown" data-wow-delay="0.6s">From startup environments to large corporations, I make efficient decisions that helps drive bottom lines.</p>
                     </div>
                     <!-- / END ABOUT TEXT AREA -->
@@ -244,14 +244,14 @@
                     <div class="about-right">
                         <ul class="wow fadeInUp" data-wow-delay="0.8s">
                             <li><i class="fa fa-angle-double-right"></i> UI/UX Design </li>
-                            <li><i class="fa fa-angle-double-right"></i>Front End Development</li>
-                            <li><i class="fa fa-angle-double-right"></i>Backend Development</li>
-                            <li><i class="fa fa-angle-double-right"></i>Database Development</li>
-                            <li><i class="fa fa-angle-double-right"></i>Data Structures</li>
+                            <li><i class="fa fa-angle-double-right"></i>User Research</li>
+                            <li><i class="fa fa-angle-double-right"></i>Prototyping & Mockups</li>
+                            <li><i class="fa fa-angle-double-right"></i>User Experience</li>
+                            <li><i class="fa fa-angle-double-right"></i>Market Research</li>
                             <li><i class="fa fa-angle-double-right"></i>Leadership</li>
-                            <li><i class="fa fa-angle-double-right"></i>Agile Development</li>
-                            <li><i class="fa fa-angle-double-right"></i>OS Development</li>
-                            <li><i class="fa fa-angle-double-right"></i>B2B & B2C Team Building</li>
+                            <li><i class="fa fa-angle-double-right"></i>Software Development</li>
+                            <li><i class="fa fa-angle-double-right"></i>Sales</li>
+                            <li><i class="fa fa-angle-double-right"></i>B2B & B2C Strategy</li>
                             <li><i class="fa fa-angle-double-right"></i>Innovation</li>
                         </ul>
                     </div>
@@ -288,8 +288,8 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-service wow fadeInUp" data-wow-delay="0.4s">
                         <i class="fa fa-line-chart"></i>
-                        <h2>Software that kicks</h2>
-                        <p>I have a passion for developing products and programs for influential companies. Every feature, spec, and design serves its purpose in the grander scale. </p>
+                        <h2>Product/Program Management</h2>
+                        <p>I have a passion for managing products and programs for influential companies. Every feature, spec, and design serves its purpose in the grander scale. </p>
                     </div>
                 </div>
                 <!-- / END SINGLE SERVICE DESIGN AREA -->
@@ -373,7 +373,7 @@
                 <div class="col-md-12">
                     <div class="contact-top">
                         <h2>Let's Make Great Things Together</h2>
-                        <p>I'd love to hear about your team at <a href="mailto:parvathi.krishnan177@gmail.com">hello@yourwebsitename.com</a> or</p>
+                        <p>I'd love to hear about your project at <a href="mailto:hello@yourwebsitename.com">hello@yourwebsitename.com</a> or</p>
                     </div>
 
                     <!-- START CONTACT FORM DESIGN AREA -->
@@ -411,7 +411,7 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <div class="footer-text">
-                        <p>Copyright PKrishnan 2020. Chat Soon! All-Right Reserved</p>
+                        <p>Copyright Jey Jeyapalan 2020. All-Right Reserved</p>
 
                     </div>
                 </div>
@@ -441,3 +441,5 @@
 </body>
 
 </html>
+
+
