--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=Jey Jeyapalan Portfolio>
+    <meta name="description" content=Parvathi Krishnan Portfolio>
     <meta name="keywords" content="creativepersonal, resume, cv, portfolio, personal, developer, designer,personal resume, onepage, clean, modern">
     <meta name="author" content=Parvathi Krishnan>
     <!-- PAGE TITLE -->
@@ -106,7 +106,7 @@
                             <div class="col-md-6">
                                 <div class="header-text">
                                     <h2>Jey Jeyapalan <br> <span>Software Engineer </span></h2>
-                                    <p>A data-driven softwar engineer with experience in B2B and B2C products.<a href="JeyJ-Resume.Pdf">View Resume</a></p>
+                                    <p>A data-driven software engineer with seasoned experience in B2B and B2C products.<a href="PKrishnan Resume.Pdf">View Resume</a></p>
                                     <div class="header-social-links">
                                         <ul>
                                             <li><a href=""><i class="fa fa-facebook facebook"></i></a>
@@ -249,7 +249,7 @@
                             <li><i class="fa fa-angle-double-right"></i>OS Development</li>
                             <li><i class="fa fa-angle-double-right"></i>C, C++, C#</li>
                             <li><i class="fa fa-angle-double-right"></i>Java</li>
-                            <li><i class="fa fa-angle-double-right"></i>Data Structures & Stuff</li>
+                            <li><i class="fa fa-angle-double-right"></i>Data Structures & Stuff :)</li>
                             <li><i class="fa fa-angle-double-right"></i>Database Development</li>
                             <li><i class="fa fa-angle-double-right"></i>B2B & B2C Tech</li>
                             <li><i class="fa fa-angle-double-right"></i>Innovation</li>
@@ -411,7 +411,7 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <div class="footer-text">
-                        <p>Copyright Jey Jeyapalan 2020. All-Right Reserved</p>
+                        <p>Copyright Parvathi Krishnan 2020. All-Right Reserved</p>
 
                     </div>
                 </div>
