--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="col-md-3 col-sm-2">
                         <!-- START LOGO DESIGN AREA -->
                         <div class="logo">
-                            <a href="index.html">Jey^2.</a>
+                            <a href="index.html">Hi There! .</a>
                         </div>
                         <!-- END LOGO DESIGN AREA -->
                     </div>
@@ -105,7 +105,7 @@
                         <div class="row header-part">
                             <div class="col-md-6">
                                 <div class="header-text">
-                                    <h2>Jey Jeyapalan <br> <span>Software Engineer </span></h2>
+                                    <h2>Parvathi Krishnan <br> <span>Software Engineer </span></h2>
                                     <p>A data-driven software engineer with seasoned experience in B2B and B2C products.<a href="PKrishnan Resume.Pdf">View Resume</a></p>
                                     <div class="header-social-links">
                                         <ul>
@@ -288,7 +288,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-service wow fadeInUp" data-wow-delay="0.4s">
                         <i class="fa fa-line-chart"></i>
-                        <h2>Software that Speaks</h2>
+                        <h2>Impact</h2>
                         <p>I have a passion for building products and programs for influential companies. Every feature, spec, and design serves its purpose in the grander scale. </p>
                     </div>
                 </div>
@@ -327,33 +327,25 @@
                     <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
                     <div class="single-testimonial text-center">
                         <i class="fa fa-comments"></i>
-                        <h2>Prit Bachu</h2>
-                        <h3>IBM SPM Program Manager</h3>
-                        <p>"Jey is detail and action oriented always willing to go the extra mile for the organization. Jey is a focused and knowledgable individual who not only works hard but also relishes the opportunity to take on new challenges." </p>
+                        <h2>Kerry</h2>
+                        <h3>Software Engineering @ Faire</h3>
+                        <p>"Parvathi is detail and action oriented always willing to go the extra mile for the organization. She is a focused and knowledgable individual who not only works hard but also relishes the opportunity to take on new challenges." </p>
                     </div>
                     <!-- / END SINGLE TESTIMONIAL DESIGN AREA -->
                     <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
                     <div class="single-testimonial text-center">
                         <i class="fa fa-comments"></i>
-                        <h2>Victoria Pelletier </h2>
-                        <h3>VP-Marketing of ValidateIT</h3>
-                        <p> "Jey is uniquely passionate about solving product problems. He goes above and beyond to improve inefficiencies, and always looks to put customers first. He would be an excellent asset to any product team. I wish him all the best."</p>
+                        <h2>Robert Burnett </h2>
+                        <h3>Manager @ Bombardier</h3>
+                        <p> "Parvathi is uniquely passionate about solving software problems. She goes above and beyond to improve inefficiencies, and always looks to put customers first. She would be an excellent asset to any product team. "</p>
                     </div>
                     <!-- / END SINGLE TESTIMONIAL DESIGN AREA -->
                     <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
                     <div class="single-testimonial text-center">
                         <i class="fa fa-comments"></i>
-                        <h2>Siva Path</h2>
-                        <h3>CEO ofTricontek</h3>
-                        <p>"There were occasions when Jey found himself at the forefront of innovation; he went through dense software documentation and found cutting edge solutions. He then utilized that knowledge within our existing technological framework to solve problems. For the foregoing reasons, I restate my wholehearted recommendation for Jey Jeyapalan"</p>
-                    </div>
-                    <!-- / END SINGLE TESTIMONIAL DESIGN AREA -->
-                    <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
-                    <div class="single-testimonial text-center">
-                        <i class="fa fa-comments"></i>
-                        <h2>Kai G</h2>
+                        <h2>Jey J</h2>
                         <h3>Founder of UW Product Vision Club</h3>
-                        <p>"Jey is a natural born leader and go-getter. He has helped to drive Product Vision Club's growth and reach to over 1000+ students in the past year. He loves product management, and has a way with leading people towards a shared vision." </p>
+                        <p>"Parvathi is a natural born leader and go-getter. She has helped to drive Product Vision Club's website growth and reach to over 1000+ students in the past year. </p>
                     </div>
                     <!-- / END SINGLE TESTIMONIAL DESIGN AREA -->
                 </div>
