--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="creativepersonal, resume, cv, portfolio, personal, developer, designer,personal resume, onepage, clean, modern">
     <meta name="author" content=Parvathi Krishnan>
     <!-- PAGE TITLE -->
-    <title>Jey Jeyapalan</title>
+    <title>{Parvathi Krishnan}</title>
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <!-- ALL GOOGLE FONTS -->
