--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
                     <div class="single-testimonial text-center">
                         <i class="fa fa-comments"></i>
-                        <h2>Robert Burnett </h2>
+                        <h2>Rob Burnett </h2>
                         <h3>Manager @ Bombardier</h3>
                         <p> "Parvathi is uniquely passionate about solving software problems. She goes above and beyond to improve inefficiencies, and always looks to put customers first. She would be an excellent asset to any product team. "</p>
                     </div>
